# loki-operators

./: .gitignore  .wokeignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: pull-request.yaml  release.yaml  tiobe-scan.yaml
coordinator/: .gitignore  README.md  SECURITY.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
coordinator/.github/: .jira_sync_config.yaml
coordinator/lib/charms/loki_k8s/v1/: loki_push_api.py
coordinator/lib/charms/observability_libs/v0/: kubernetes_compute_resources_patch.py
coordinator/lib/charms/tempo_coordinator_k8s/v0/: tracing.py
coordinator/scripts/: check_lokitool_version.py
coordinator/src/: charm.py  config_builder.py  loki_cluster.py  loki_config.py  loki_coordinator.py  nginx.py  nginx_config.py
coordinator/src/grafana_dashboards/: loki_ha.json.tmpl
coordinator/src/loki_alert_rules/: log_volume.rule
coordinator/src/loki_alert_rules/consolidated_rules/: consolidated_worker.rules
coordinator/src/loki_coordinator_k8s.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coordinator/terraform/: README.md  main.tf  outputs.tf  variables.tf
coordinator/tests/integration/: conftest.py  helpers.py  test_charm.py  test_charm_ha.py  test_charm_ha_scaled.py  test_charm_monolithic.py  test_service_mesh.py  test_workload_tracing.py
coordinator/tests/interface/: conftest.py
coordinator/tests/scenario/: conftest.py  test_datasources.py  test_mimir_cluster_interface.py
coordinator/tests/unit/: conftest.py  helpers.py  test_alert_rule_filtering.py  test_charm.py  test_coherence.py  test_config.py  test_datasources.py  test_ingress_revoked.py  test_loki_config.py  test_nginx_config.py  test_telemetry_correlation.py  test_tls.py
probes/: cluster-consistency.yaml
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/integration/: conftest.py  helpers.py  test_charm_ha.py  test_charm_ha_scaled.py  test_charm_monolithic.py  test_charm_upgrade.py  test_juju_doctor.py  test_service_mesh.py  test_tls.py  test_workload_tracing.py
worker/: charmcraft.yaml  pyproject.toml  tox.ini
worker/src/: charm.py
(+5 files in other folders)
